--- a/index.html
+++ b/index.html
@@ -2,11 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="assets/css/styles.css" rel="stylesheet">
+    <title>Tom Waits Unofficial Fansite</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md bg-dark">
+        <img class="navbar-brand" src="https://www.spirit-of-rock.com/les%20goupes/T/Tom%20Waits/pics/logo.gif" width="120" height="120">
+    </nav>
+    <ul class="navbar-nav">
+        <li>
+            <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li>
+            <a class="nav-link" href="toms_discs.html">Tom's Discs</a>
+        </li>
+        <li>
+            <a class="nav-link" href="tom_live.html">Tom Live</a>
+        </li>
+        <li>
+            <a class="nav-link" href="subscribe.html">Subscribe</a>
+        </li>
+    </ul>
+</div>
+
+<div class="container-fluid bg-dark"></div>
+ 
     
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
