--- a/index.html
+++ b/index.html
@@ -4,50 +4,48 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home</title>
+	<title>Tom Live</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap" rel="stylesheet">
-	<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-a11y="true">
-
-	</script>
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-</head>
-	<body>
-<div class="hero">
-	<div style="background-image: url( https://pbs.twimg.com/media/D-AM9k2U4AAi-uM.jpg);">
-  </div>
-		<div class="header">
-			<h1>TOM WAITS</h1>
-			<ul class="nav">
-				<li><a href="index.html">Home</a>
-					<li>
-						<li><a href="toms_discs.html">Tom's Discs</a>
-							<li>
-								<li><a href="tom_live.html">Tom Live</a>
-									<li>
-										<li><a href="subscribe.html">Subscribe</a>
-											<li>
-			</ul>
-		</div>
-	</div>
+  </head>
+  <body>
+			<div class="header">
+				<h1>TOM WAITS</h1>
+				<ul class="nav">
+					<li><a href="index.html">Home</a>
+						<li>
+							<li><a href="toms_discs.html">Tom's Discs</a>
+								<li>
+									<li><a href="tom_live.html">Tom Live</a>
+										<li>
+											<li><a href="subscribe.html">Subscribe</a>
+												<li>
+				</ul>
+        </div>
 
 	
       <div class="container">
 			<div class="who">
 				<h2>Who is<strong>Tom Waits?</strong></h2>
-    <p>For close to<strong>50 years</strong>, Tom Waits has brought his own unique set of musical and acting skills to the world. From the world of 'down and out' bars, to the<strong>'clang and clunk'</strong> of junkyard instrumentalisation, each fan of Tom has their own favourite period.</p>
-    <p>Whether it's your first taste of Tom, or you are a seasoned fan, you can get<strong>'all things Tom'</strong>on the following pages. If you subscribe you'll also receive all of the latest news and can vote for your favourite Tom tune!</p>
+    <p>For close to<strong> 50 years</strong>, Tom Waits has brought his own unique set of musical and acting skills to the world. From the world of 'down and out' bars, to the<strong> 'clang and clunk'</strong> of junkyard instrumentalisation, each fan of Tom has their own favourite period.</p>
+    <p>Whether it's your first taste of Tom, or you are a seasoned fan, you can get <strong>'all things Tom'</strong> on the following pages. If you subscribe you'll also receive all of the latest news and can vote for your favourite Tom tune!</p>
     </div>
+
+    <div class="hero">
+    <img src="https://www.beachamjournal.com/.a/6a01053653b3c7970b026bdeab7717200c-800wi" alt="Tom_in_a_chair">
+  </div>
+    
   
   <div class="dates">
     <h2>This is the <strong>unofficial</strong> fan's website where you can catch all the latest Tom announcements</h2>
     <h3><strong>New Tour Dates Announced!!!</strong></h3>
     <br>
     <hr>
-    <p><strong>12th January 2022</strong>- Hammersmith Apollo- London</p>
-    <p><strong>13th January 2022</strong>- O2 Arena- London</p>
-    <p><strong>12th January 2022</strong>- Hammersmith Apollo- London</p>
+    <p><strong>12th January 2022</strong>-Hammersmith Apollo- London</p>
+    <p><strong>13th January 2022</strong>-O2 Arena- London</p>
+    <p><strong>12th January 2022</strong>-Hammersmith Apollo- London</p>
     <p><strong>15th January 2022</strong>-Seville, Estadio La Cartuja De Sevilla</p>
     <p><strong>17th January 2022</strong>-Barcelona- Estadi Olimpic</p>
     <p><strong>19th January 2022</strong>-Nijmegen, Goffertpark</p>
