validate all html files and css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
       <div class="container">
 			<div class="who">
-				<h2>Who is<strong>Tom Waits?</strong></h2>
+				<h2>Who is<strong> Tom Waits?</strong></h2>
     <p>For close to<strong> 50 years</strong>, Tom Waits has brought his own unique set of musical and acting skills to the world. From the world of 'down and out' bars, to the<strong> 'clang and clunk'</strong> of junkyard instrumentalisation, each fan of Tom has their own favourite period.</p>
     <p>Whether it's your first taste of Tom, or you are a seasoned fan, you can get <strong>'all things Tom'</strong> on the following pages. If you subscribe you'll also receive all of the latest news and can vote for your favourite Tom tune!</p>
     </div>
@@ -40,7 +40,7 @@
   
   <div class="dates">
     <h2>This is the <strong>unofficial</strong> fan's website where you can catch all the latest Tom announcements</h2>
-    <h3><strong>New Tour Dates Announced!!!</strong></h3>
+    <h3><strong>!New Tour Dates Announced!</strong></h3>
     <br>
     <hr>
     <p><strong>12th January 2022</strong>-Hammersmith Apollo- London</p>
