sort alignments errors on tom_live and toms_discs

--- a/toms_discs.html
+++ b/toms_discs.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap" rel="stylesheet">
-	<link href="assets/css/styles.css" rel="stylesheet" type="text/css" />
+	<link href="assets/styles.css"   rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -34,26 +34,27 @@
 			noir, but set in the gutter. This is downtrodden Tom, working shifts so that he might be able to afford a whiskey, and
 			perhaps a night out with his lady. Top tracks include 'Step Right Up', 'Tom Traubert's Blues' and 'The Piano Has Been
 			Drinking (Not Me)'.<hr></div>
+      
       <div><em>"The milieu is familiar, but he makes it all sound fantastical. “The Piano Has Been Drinking (Not Me)” is another song that sounds like it was recorded at 3 a.m. in a bar, but what sets it apart is how Waits presents the setting as nearly surreal: “The piano has been drinking, my necktie is asleep,” he observes from his bench. “The telephone’s out of cigarettes, and the balcony is on the make.” It sounds like the world he has carefully crafted on his first three albums is unraveling at its seams. “Pasties and a G-String” de-eroticizes its low-rent burlesque as a phantasmagoria of despair and boredom. Even “Step Right Up,” with Waits playing the carnival barker on some seedy midway, turns advertising slogans into dark magic."</em>
   </div>
 	</div>
   
 <div class="albums">
-  <a target="_blank" href=""https://images-na.ssl-images-amazon.com/images/I/81eN10gtGhL._AC_SL1400_.jpg">
-    <img src="https://images-na.ssl-images-amazon.com/images/I/81eN10gtGhL._AC_SL1400_.jpg"alt="Rain Dogs" width="300" height="300">
+  <a target="_blank" href="https://images-na.ssl-images-amazon.com/images/I/81eN10gtGhL._AC_SL1400_.jpg">
+    <img src="https://images-na.ssl-images-amazon.com/images/I/81eN10gtGhL._AC_SL1400_.jpg" alt="Rain Dogs" width="300" height="300">
   </a>
   <div class="desc">Released in 1985 this is part of a 3 album release, that saw Tom reach cult status. The sounds on this are quite unique and sees Tom combine polka, with New Orleans brass bands, and good old rock 'n' roll working alongside Keith Richards. It also sees Tom experiment with industrial sounds and some of the album highlights include, 'Big Black Mariah', 'Time', and 'Gun Street Girl'. <hr></div>
-  <div><em>"One of Rain Dogs’ most lasting achievements is its sonic experimentation. Tom Waits surrounded himself with like-minded musicians from the underground, avant-garde music scene in New York. They were after creating music that fell within the conventions of rock/pop music, but sounded nothing like typical rock/pop songs. Waits talked about that aspect of the album: “If I want a sound, I usually feel better if I’ve chased it and killed it, skinned it and cooked it. Most things you can get with a button nowadays. So if I was trying for a certain drum sound, my engineer would say: ‘Oh, for Christ’s sake, why are we wasting our time? Let’s just hit this little cup with a stick here, sample something, take a drum sound from another record and make it bigger in the mix, don’t worry about it.’ I’d say, ‘No, I would rather go in the bathroom and hit the door with a piece of two-by-four very hard.”"</em>
+  <div><em>"One of Rain Dogs’ most lasting achievements is its sonic experimentation. Tom Waits surrounded himself with like-minded musicians from the underground, avant-garde music scene in New York. They were after creating music that fell within the conventions of rock/pop music, but sounded nothing like typical rock/pop songs. Waits talked about that aspect of the album: “If I want a sound, I usually feel better if I’ve chased it and killed it, skinned it and cooked it. Most things you can get with a button nowadays. So if I was trying for a certain drum sound, my engineer would say: ‘Oh, for Christ’s sake, why are we wasting our time? Let’s just hit this little cup with a stick here, sample something, take a drum sound from another record and make it bigger in the mix, don’t worry about it.’ I’d say, ‘No, I would rather go in the bathroom and hit the door with a piece of two-by-four very hard."</em>
   </div>
 </div>
 
 <div class="albums">
   <a target="_blank" href="https://resizing.flixster.com/M96nfuFSt519ps5h2gp0ZCReZxs=/300x300/v2/https://flxt.tmsimg.com/assets/p11056_i_v9_aa.jpg">
-    <img src="https://resizing.flixster.com/M96nfuFSt519ps5h2gp0ZCReZxs=/300x300/v2/https://flxt.tmsimg.com/assets/p11056_i_v9_aa.jpg"alt="Big Time" width="300" height="300">
+    <img src="https://resizing.flixster.com/M96nfuFSt519ps5h2gp0ZCReZxs=/300x300/v2/https://flxt.tmsimg.com/assets/p11056_i_v9_aa.jpg" alt="Big Time" width="300" height="300">
   </a> 
   <div class="desc">A real hit on the senses with this visual 'live' recording. Tom is fine form, with his live band, and this is no ordinary concert movie. Only ever released on VHS, copies are as rare as hen's teeth but you can catch excerpts on the 'Tom Live' page.The first time I saw this I wasn't sure if I was half asleep, as was like watching the weirdest dream you've had but with incredible music.<hr></div>
   
-  <div><em>"Tom Waits: I think the question I get asked the most is, well I dunno know, it happens a lot, enough that I would remark on it - a lot of people come up to me and they say "Is it possible for a woman to get pregnant without intercourse?" My answer's always the same, I say: "Listen. We're gonna have to go all the way back to the civil war."<hr>"Combining performance footage of Tom Waits and his band with dramatic set pieces, this unique concert film showcases Waits' many talents. Waits plays a number of different characters in short vignettes, such as a ticket taker and a lighting operator. These scenes also incorporate Waits performing songs, which are taken mostly from his "Frank" albums. As the film moves across different areas of the theater, Waits also performs a series of monologues, demonstrating adept showmanship.”</em>
+  <div><em>"Tom Waits: I think the question I get asked the most is, well I dunno know, it happens a lot, enough that I would remark on it - a lot of people come up to me and they say "Is it possible for a woman to get pregnant without intercourse?" My answer's always the same, I say: "Listen. We're gonna have to go all the way back to the civil war.""Combining performance footage of Tom Waits and his band with dramatic set pieces, this unique concert film showcases Waits' many talents. Waits plays a number of different characters in short vignettes, such as a ticket taker and a lighting operator. These scenes also incorporate Waits performing songs, which are taken mostly from his "Frank" albums. As the film moves across different areas of the theater, Waits also performs a series of monologues, demonstrating adept showmanship.”</em>
   </div>
 </div>
 
@@ -79,8 +80,9 @@
   <a target="_blank" href="https://upload.wikimedia.org/wikipedia/en/7/7d/TomWaits-BoneMachine.jpg">
     <img src="https://upload.wikimedia.org/wikipedia/en/7/7d/TomWaits-BoneMachine.jpg" alt="Bone Machine" width="300" height="300">
   </a>
-  <div class="desc">Released in 1992, this album features one of Tom's biggest commercial hits with 'I Don't Wanna Grow Up'.This was about the time that I tried to introduce Tom to my friends, and I'm still trying 30 years later. There are lots of albums to choose from with a style for most people, so have a listen.<hr><em></div>
-  <div>"Simply put, Bone Machine is not for the faint of heart. Even by Waits‘ standards, it’s a difficult listen, with its lyrical fixation on the macabre and its unhinged sonic palette. Yet because of this, it’s one that many see as Waits’ most fully realized work, one that if you as the listener overcome the challenge of confronting the album and in the process absorb all it has to offer, you come out the other side all the more grateful for having made the journey."<hr>"Bone Machine is dark, sad, furious, frightening and beautiful; a masterpiece of experimental rock. It may not be his magnum opus (I feel any aspiring music critic needs to use that term at one point or another), an accolade that probably goes to Rain Dogs, but it certainly would have been for most artists. It remains one of his darkest and most interesting albums."<em></div>
+  <div class="desc">Released in 1992, this album features one of Tom's biggest commercial hits with 'I Don't Wanna Grow Up'.This was about the time that I tried to introduce Tom to my friends, and I'm still trying 30 years later. There are lots of albums to choose from with a style for most people, so have a listen. <hr></div>
+   
+  <div><em>"Simply put, Bone Machine is not for the faint of heart. Even by Waits‘ standards, it’s a difficult listen, with its lyrical fixation on the macabre and its unhinged sonic palette. Yet because of this, it’s one that many see as Waits’ most fully realized work, one that if you as the listener overcome the challenge of confronting the album and in the process absorb all it has to offer, you come out the other side all the more grateful for having made the journey". "Bone Machine is dark, sad, furious, frightening and beautiful; a masterpiece of experimental rock. It may not be his magnum opus (I feel any aspiring music critic needs to use that term at one point or another), an accolade that probably goes to Rain Dogs, but it certainly would have been for most artists. It remains one of his darkest and most interesting albums."</em></div>
   
 </div>
 
