--- a/subscribe.html
+++ b/subscribe.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap" rel="stylesheet">
-	<link href="assets/css/styles.css" rel="stylesheet" type="text/css">
+	<link href="assets/styles.css"   rel="stylesheet" type="text/css" />
   </head>
   <body>
 
@@ -90,7 +90,7 @@
     </div>
   </form>
 </div>
-
+</section>
  <div class="footer">
         <ul class="social">
             <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></li></a>
@@ -102,10 +102,8 @@
             <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM"  target="_blank"><i class="fab fa-spotify"></i></li></a>
             </ul>
     </div>
-    
   
   <script src="https://kit.fontawesome.com/3982258271.js"></script>
-  </section>
  </body> 
 </html>
     
