--- a/toms_discs.html
+++ b/toms_discs.html
@@ -2,29 +2,26 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tom Live</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap" rel="stylesheet">
-	<link href="assets/styles.css"   rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tom Live</title>
+  <link href="assets/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-	<div class="header">
-		<h1>TOM WAITS</h1>
-		<ul class="nav">
-			<li><a href="index.html">Home</a>
-				<li>
-					<li><a href="toms_discs.html">Tom's Discs</a>
-						<li>
-							<li><a href="tom_live.html">Tom Live</a>
-								<li>
-									<li><a href="subscribe.html">Subscribe</a>
-										<li>
-		</ul>
-	</div>
+  <header class="header">
+    <h1>TOM WAITS</h1>
+    <ul class="nav">
+      <li><a href="index.html">Home</a>
+      </li>
+      <li><a href="toms_discs.html">Tom's Discs</a>
+      </li>
+      <li><a href="tom_live.html">Tom Live</a>
+      </li>
+      <li><a href="subscribe.html">Subscribe</a>
+      </li>
+    </ul>
+  </header>
 
 	<div class="albums">
 		<a target="_blank" href="https://www.normanrecords.com/artwork/large/154/129904-tom-waits-small-change.jpg">
