--- a/tom_live.html
+++ b/tom_live.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tom Live</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link href="assets/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -22,63 +24,68 @@
       </li>
     </ul>
   </header>
-			
 
 
-  
-	<div class="live">
-		<iframe width="300" height="300" src="https://www.youtube.com/embed/XxCZC5dF8D8">
-		</iframe>
-			<iframe width="300" height="300" src="https://www.youtube.com/embed/rLtZKkCIVmI">
-			</iframe>
-		
-			<iframe width="300" height="300" src="https://www.youtube.com/embed/h1MBCRUFi4E">
-			</iframe>
-		
-			<iframe width="300" height="300" src="https://www.youtube.com/embed/HkOMiA_uGso">
-			</iframe>
-		
-			<iframe width="300" height="300" src="https://www.youtube.com/embed/6g8eRnks9bM"> 
-			</iframe>
-	
-			<iframe width="300" height="300" src="https://www.youtube.com/embed/1wfamPW3Eaw">
-			</iframe>
-	
-  <iframe width="300" height="300" src="https://www.youtube.com/embed/OpKB6OZ_B4c">
-			</iframe>
 
-      <iframe width="300" height="300" src="https://www.youtube.com/embed/KshrtLXBdl8">
-			</iframe>
 
-      <iframe width="300" height="300" src="https://www.youtube.com/embed/OqH7VwpSwBo">
-			</iframe>
+  <div class="live">
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/XxCZC5dF8D8">
+    </iframe>
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/rLtZKkCIVmI">
+    </iframe>
 
-    </div>
-    
-	<div class ="info">
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/h1MBCRUFi4E">
+    </iframe>
+
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/HkOMiA_uGso">
+    </iframe>
+
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/6g8eRnks9bM">
+    </iframe>
+
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/1wfamPW3Eaw">
+    </iframe>
+
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/OpKB6OZ_B4c">
+    </iframe>
+
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/KshrtLXBdl8">
+    </iframe>
+
+    <iframe width="300" height="300" src="https://www.youtube.com/embed/OqH7VwpSwBo">
+    </iframe>
+
+  </div>
+
+  <div class="info">
     <h3>A selection of performance for you to enjoy</h3>
-    <p>The videos above are a selection of different performances of Tom, over the years. You can see how his styles have changed and how he loves to experiment. He lists his own influences as<strong> Bob Dylan, Theolonius Monk, Howlin Wolf, Captain Beefheart, Frank Sinatra, and The Rolling Stones to name but a few.</strong>Check out some of his influences.
-</div>
-	
- <div class="footer">
-        <ul class="social">
-            <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+    <p>The videos above are a selection of different performances of Tom, over the years. You can see how his styles
+      have changed and how he loves to experiment. He lists his own influences as<strong> Bob Dylan, Theolonius Monk,
+        Howlin Wolf, Captain Beefheart, Frank Sinatra, and The Rolling Stones to name but a few.</strong>Check out some
+      of his influences.
+  </div>
 
-            <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+  <div class="footer">
+    <ul class="social">
+      <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
 
-            <li><a href="https://www.youtube.com/channel/UCba292MOfMp_6kCO9qjVJAA" target="_blank"><i class="fab fa-youtube"></i></a></li>
+      <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
 
-            <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM"  target="_blank"><i class="fab fa-spotify"></i></a></li>
-            </ul>
-    </div>
-    
-  
+      <li><a href="https://www.youtube.com/channel/UCba292MOfMp_6kCO9qjVJAA" target="_blank"><i
+            class="fab fa-youtube"></i></a></li>
+
+      <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
+            class="fab fa-spotify"></i></a></li>
+    </ul>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+  </script>
   <script src="https://kit.fontawesome.com/3982258271.js"></script>
- </body> 
+</body>
+
 </html>
-
-  
-
-  
-
-  
