Change hero image so it is responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section class="hero">
-      <img src="https://www.beachamjournal.com/.a/6a01053653b3c7970b026bdeab7717200c-800wi" alt="Tom_in_a_chair">
+      <img src="assets/images/tom_in_a_chair.jpg" alt="Tom_in_a_chair">
     </section>
 
 
