--- a/subscribe.html
+++ b/subscribe.html
@@ -88,19 +88,20 @@
       </div>
     </form>
   </main>
-  <div class="footer">
+  <footer class="footer">
     <ul class="social">
-      <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></li></a>
+      <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
 
-      <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></li></a>
+      <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
 
       <li><a href="https://www.youtube.com/channel/UCba292MOfMp_6kCO9qjVJAA" target="_blank"><i
-            class="fab fa-youtube"></i></li></a>
+            class="fab fa-youtube"></i></a></li>
 
       <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
-            class="fab fa-spotify"></i></li></a>
+            class="fab fa-spotify"></i></a></li>
     </ul>
-  </div>
+  </footer>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
   </script>
