--- a/tom_live.html
+++ b/tom_live.html
@@ -65,7 +65,7 @@
       of his influences.
   </div>
 
-  <div class="footer">
+  <footer class="footer">
     <ul class="social">
       <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
 
@@ -77,7 +77,8 @@
       <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
             class="fab fa-spotify"></i></a></li>
     </ul>
-  </div>
+  </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
