--- a/toms_discs.html
+++ b/toms_discs.html
@@ -168,7 +168,7 @@
   </div>
 
 
-  <div class="footer">
+  <footer class="footer">
     <ul class="social">
       <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
 
@@ -180,7 +180,8 @@
       <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
             class="fab fa-spotify"></i></a></li>
     </ul>
-  </div>
+  </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
