Amend index file to include bootstrap responsive classes

--- a/index.html
+++ b/index.html
@@ -2,51 +2,72 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tom Live</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link href="assets/styles.css" rel="stylesheet" type="text/css" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Dongle&family=Noticia+Text:ital@1&family=Red+Hat+Mono&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+	 crossorigin="anonymous" />
+	<link rel="stylesheet" href="assets/css/style.css">
+	<title>Tom Waits | Home</title>
 </head>
 
 <body>
-  <header class="header">
-    <h1>TOM WAITS</h1>
-    <ul class="nav">
-      <li><a href="index.html">Home</a>
-      </li>
-      <li><a href="toms_discs.html">Tom's Discs</a>
-      </li>
-      <li><a href="tom_live.html">Tom Live</a>
-      </li>
-      <li><a href="subscribe.html">Subscribe</a>
-      </li>
-    </ul>
+	<header>
+		<div class="container-fluid">
+			<h2>Tom Waits Unofficial Fansite</h2><br>
+	</div>
   </header>
 
+	<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+		<!-- Toggler/collapsibe Button -->
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  <main class="container">
-    <section class="who">
-      <h2>Who is<strong> Tom Waits?</strong></h2>
-      <p>For close to<strong> 50 years</strong>, Tom Waits has brought his own unique set of musical and acting skills
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="toms_discs.html">Tom's Discs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="tom_live.html">Tom Live</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="subscribe.html">Subscribe</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <div class="who">
+    <h2>Who Is Tom Waits?</h2>
+    <p>For close to<strong> 50 years</strong>, Tom Waits has brought his own unique set of musical and acting skills
         to the world. From the world of 'down and out' bars, to the<strong> 'clang and clunk'</strong> of junkyard
-        instrumentalisation, each fan of Tom has their own favourite period.</p>
-      <p>Whether it's your first taste of Tom, or you are a seasoned fan, you can get <strong>'all things Tom'</strong>
-        on the following pages. If you subscribe you'll also receive all of the latest news and can vote for your
-        favourite Tom tune!</p>
-    </section>
-
-    <section class="hero">
-      <img src="assets/images/tom_in_a_chair.jpg" alt="Tom_in_a_chair">
-    </section>
-
-
-    <section class="dates">
-      <h2>News</h2>
-      <h2>This is the <strong>unofficial</strong> fan's website where you can catch all the latest Tom announcements
-      </h2>
-      <h3><strong>!New Tour Dates Announced!</strong></h3>
+        instrumentalisation, each fan of Tom has their own favourite period. Whether it's your first taste of Tom, or you are a seasoned fan, you can get <strong>'all things Tom'</strong>
+        on the following pages. If you subscribe you'll also receive all of the latest news and can vote for your favourite Tom tune!</p>
+<img class="img-fluid" src="http://images.genius.com/505d2d5d1d43304dca446fd2e788a0f8.750x750x1.jpg" alt="Tom Waits">
+  </div>
+</div>
+</div>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="news">
+      <h3>News</h3><br>
+  <hr>
+      <h5>This is the <strong>unofficial</strong> fan's website where you can catch all of the latest announcements. Watch out for tour dates, album releases or chat show appearances.
+      </h5>
+      <hr>
+      <h5><strong>!!! New Tour Dates Announced !!! 10.10.2021</strong></h5>
       <br>
       <hr>
       <p><strong>12th January 2022</strong>-Hammersmith Apollo- London</p>
@@ -57,32 +78,37 @@
       <p><strong>19th January 2022</strong>-Nijmegen, Goffertpark</p>
       <p><strong>21st January 2022</strong>-Budapest, Puskas Stadium</p>
       <p><strong>22nd January 2022</strong>-Firenze, Italy – Firenze Rocks</p>
-      <p><strong>26th January 2022</strong>-Dublin, Marlay Park</p>
-    </section>
-  </main>
+      <p><strong>26th January 2022</strong>-Dublin, Marlay Park</p><br><hr>
+      <h3>Rumours of a new album 22.10.2021</h3>
+      <p>Hold on to your hats, there are rumours of a new album for 2022. It's not clear if this is new material, cover versions, or re-issues, but at this stage we will take what we can get! A source close to Tom suspects that it will indeed be some covers from Tom's inspirations including the folk of Woody Guthrie and the blues of Howlin' Wolf</p>
+      </div>
+</div>
 
-  <footer class="footer">
-    <ul class="social">
-      <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+  <div class="col-sm-6"><blockquote class="blockquote">
+    <h4>Tom is famous for his wit and wisdom!</h4><br>
+    <hr>
+    <p class="mb-0">"I started out with nothing and I still got most of it left."</p><br>
+  <p class="mb-0">"A gentleman is someone who can play the accordion, but doesn't."</p><br>
+  <p class="mb-0">"The big print giveth and the small print taketh away."</p><br>
+  <p class="mb-0">"Champagne for my real friends and real pain for my sham friends."</p><br>
+  <p class="mb-0">"I'd rather have a free bottle in front of me than a prefrontal lobotomy."</p><br>
+  <p class="mb-0">"Jimmy Stewart said he stopped making movies because he didn't like the way he looked on screen anymore. I'm more the guy who says I look like hell but I'm going to see where it gets me."</p><br>
+  <p class="mb-0">"Most of the people I admire, they usually smell funny and don't get out much. It's true. Most of them are either dead or not feeling well."</p><br>
+</blockquote>
+</div>
+</div>
+ 
+ 
 
-      <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-
-      <li><a href="https://www.youtube.com/channel/UCba292MOfMp_6kCO9qjVJAA" target="_blank"><i
-            class="fab fa-youtube"></i></a></li>
-
-      <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
-            class="fab fa-spotify"></i></a></li>
-    </ul>
-  </footer>
-
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
-  </script>
-  <script src="https://kit.fontawesome.com/3982258271.js"></script>
+ <footer>
+        <ul class="social-networks">
+            <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook"> </i></a></li>
+            <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i class="fab fa-spotify"></i></a></li>
+            <li><a href="https://www.instagram.com/tomwaits/?hl=en" target="_blank"><i class="fab fa-instagram"> </i></a></li>
+        </ul>
+    </footer>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
-
 </html>
