--- a/subscribe.html
+++ b/subscribe.html
@@ -29,7 +29,7 @@
   <aside class="lead">
     <h2>Subscribe For Tom Updates</h2>To get the latest news and to hear about releases and show, then just sign up!</p>
   </aside>
-  <main class="container">
+  <main class="container-fluid">
     <form>
       <div class="row">
         <div class="col-25">
@@ -88,6 +88,7 @@
       </div>
     </form>
   </main>
+ 
   <footer class="footer">
     <ul class="social">
       <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
@@ -101,6 +102,7 @@
             class="fab fa-spotify"></i></a></li>
     </ul>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
