--- a/tom_live.html
+++ b/tom_live.html
@@ -4,89 +4,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link rel="stylesheet" href="assets/styles.css">
   <title>Tom Live</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link href="assets/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header class="header">
-    <h1>TOM WAITS</h1>
-    <ul class="nav">
-      <li><a href="index.html">Home</a>
-      </li>
-      <li><a href="toms_discs.html">Tom's Discs</a>
-      </li>
-      <li><a href="tom_live.html">Tom Live</a>
-      </li>
-      <li><a href="subscribe.html">Subscribe</a>
-      </li>
-    </ul>
-  </header>
+  <div class="container-fluid">
+    <h1>Tom Waits Unofficial Fansite</h1>
+  </div>
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-
-
-  <div class="live">
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/XxCZC5dF8D8">
-    </iframe>
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/rLtZKkCIVmI">
-    </iframe>
-
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/h1MBCRUFi4E">
-    </iframe>
-
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/HkOMiA_uGso">
-    </iframe>
-
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/6g8eRnks9bM">
-    </iframe>
-
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/1wfamPW3Eaw">
-    </iframe>
-
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/OpKB6OZ_B4c">
-    </iframe>
-
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/KshrtLXBdl8">
-    </iframe>
-
-    <iframe width="300" height="300" src="https://www.youtube.com/embed/OqH7VwpSwBo">
-    </iframe>
-
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="toms_discs.html">Tom's Discs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="tom_live.html">Tom Live</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="subscribe.html">Subscribe</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Youtube links-->
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rLtZKkCIVmI" allowfullscreen></iframe>
   </div>
 
-  <div class="info">
-    <h3>A selection of performance for you to enjoy</h3>
-    <p>The videos above are a selection of different performances of Tom, over the years. You can see how his styles
-      have changed and how he loves to experiment. He lists his own influences as<strong> Bob Dylan, Theolonius Monk,
-        Howlin Wolf, Captain Beefheart, Frank Sinatra, and The Rolling Stones to name but a few.</strong>Check out some
-      of his influences.
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qwRkBTG17vk" allowfullscreen></iframe>
+  </div>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jLyHHwDXw5Y" allowfullscreen></iframe>
   </div>
 
-  <footer class="footer">
-    <ul class="social">
-      <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wOQplFQqOk4" allowfullscreen></iframe>
+  </div>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jLyHHwDXw5Y" allowfullscreen></iframe>
+  </div>
 
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YVJ3iY7EceE" allowfullscreen></iframe>
+  </div>
+  <div class="container-fluid">
+    <div class="influences">
+      <h2>If You Wonder Who Influenced Tom?</h2><br>
+    </div>
+  </div>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MGxjIBEZvx0" allowfullscreen></iframe>
+  </div>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HTDjD_UdJYs" allowfullscreen></iframe>
+  </div>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KshrtLXBdl8" allowfullscreen></iframe>
+  </div>
+  <!-- social media links -->
+  <footer>
+    <ul class="social-networks">
+      <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook"> </i></a></li>
       <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-
-      <li><a href="https://www.youtube.com/channel/UCba292MOfMp_6kCO9qjVJAA" target="_blank"><i
-            class="fab fa-youtube"></i></a></li>
-
       <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
             class="fab fa-spotify"></i></a></li>
+      <li><a href="https://www.instagram.com/tomwaits/?hl=en" target="_blank"><i class="fab fa-instagram"> </i></a></li>
     </ul>
   </footer>
-
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous">
   </script>
-  <script src="https://kit.fontawesome.com/3982258271.js"></script>
 </body>
 
 </html>
