--- a/toms_discs.html
+++ b/toms_discs.html
@@ -4,12 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Dongle&family=Noticia+Text:ital@1&family=Red+Hat+Mono&family=Zen+Old+Mincho&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/styles.css">
-  <title>Tom's Discs</title>
+  <title>Tom Waits | Home</title>
 </head>
 
 <body>
@@ -39,6 +45,7 @@
       </ul>
     </div>
   </nav>
+  <!-- Card/images/album descrips -->
   <div class="card">
     <img class="card-img-top" src="https://www.normanrecords.com/artwork/large/154/129904-tom-waits-small-change.jpg"
       alt="Small Change">
@@ -121,6 +128,7 @@
       <a href="https://en.wikipedia.org/wiki/Bone_Machine" class="btn btn-primary">To see the tracklisting</a>
     </div>
   </div>
+  <!-- Social/links -->
   <footer>
     <ul class="social-networks">
       <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook"></i></a></li>
