All html files validated on w3c validator with no errors

--- a/toms_discs.html
+++ b/toms_discs.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/styles.css">
-  <title>Tom Waits | Home</title>
+  <title>Tom's Discs</title>
 </head>
 
 <body>
@@ -124,7 +124,7 @@
         Wanna
         Grow Up'.This was about the time that I tried to introduce Tom to my friends, and I'm still trying 30 years
         later.
-        There are lots of albums to choose from with a style for most people, so have a listen.</p>
+        There are lots of albums to choose from with a style for most people.</p>
       <a href="https://en.wikipedia.org/wiki/Bone_Machine" target="_blank" class="btn btn-primary">To see the tracklisting</a>
     </div>
   </div>
