Format all files and ensure validation checks pass

--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
           anymore. I'm more the guy who says I look like hell but I'm going to see where it gets me."</p><br>
         <p class="mb-0">"Most of the people I admire, they usually smell funny and don't get out much. It's true. Most
           of them are either dead or not feeling well."</p><br>
-          <p class="mb-0">"Writing songs is like capturing birds without killing them. Sometimes you end up with nothing but a mouthful of feathers."</p><br>
-            <p class="mb-0">"If you record the sound of bacon in a frying pan and play it back, it sounds like the pops and cracks on an old 33 1/3 recording. Almost exactly like that. You could substitute it for that sound."</p><br>
-              <p class="mb-0">"Don't you know there ain't no devil, it's just god when he's drunk."</p><br>
+        <p class="mb-0">"Writing songs is like capturing birds without killing them. Sometimes you end up with nothing
+          but a mouthful of feathers."</p><br>
+        <p class="mb-0">"If you record the sound of bacon in a frying pan and play it back, it sounds like the pops and
+          cracks on an old 33 1/3 recording. Almost exactly like that. You could substitute it for that sound."</p><br>
+        <p class="mb-0">"Don't you know there ain't no devil, it's just god when he's drunk."</p><br>
       </blockquote>
     </div>
   </div>
