--- a/toms_discs.html
+++ b/toms_discs.html
@@ -73,7 +73,8 @@
         working
         alongside Keith Richards. It also sees Tom experiment with industrial sounds and some of the album highlights
         include, 'Big Black Mariah', 'Time', and 'Gun Street Girl'.</p>
-      <a href="https://en.wikipedia.org/wiki/Rain_Dogs" target="_blank" class="btn btn-primary">To see the tracklisting</a>
+      <a href="https://en.wikipedia.org/wiki/Rain_Dogs" target="_blank" class="btn btn-primary">To see the
+        tracklisting</a>
     </div>
   </div>
   <div class="card">
@@ -87,7 +88,8 @@
         and this is no ordinary concert movie. Only ever released on VHS, copies are as rare as hen's teeth but you can
         catch excerpts on the 'Tom Live' page.The first time I saw this I wasn't sure if I was half asleep, as was like
         watching the weirdest dream you've had but with incredible music.</p>
-      <a href="https://en.wikipedia.org/wiki/Big_Time_(Tom_Waits_album)" target="_blank" class="btn btn-primary">To see the
+      <a href="https://en.wikipedia.org/wiki/Big_Time_(Tom_Waits_album)" target="_blank" class="btn btn-primary">To see
+        the
         tracklisting</a>
     </div>
   </div>
@@ -101,7 +103,8 @@
         some old
         collaborators including Smokey Hormel and Marc Ribot, there is a real diversity to the album. Highlights include
         the beautiful 'House Where Nobody Lives' and the eccentric 'Chocolate Jesus'.</p>
-      <a href="https://en.wikipedia.org/wiki/Mule_Variations" target="_blank" class="btn btn-primary">To see the tracklisting</a>
+      <a href="https://en.wikipedia.org/wiki/Mule_Variations" target="_blank" class="btn btn-primary">To see the
+        tracklisting</a>
     </div>
   </div>
   <div class="card">
@@ -112,7 +115,8 @@
         of
         Tom's favourite collaboraters, including Keith Richards. This has been the last studio album and Tom has been
         focussing on acting roles including the brilliant 'Ballad of Buster Scruggs'</p>
-      <a href="https://en.wikipedia.org/wiki/Bad_as_Me" target="_blank" class="btn btn-primary">To see the tracklisting</a>
+      <a href="https://en.wikipedia.org/wiki/Bad_as_Me" target="_blank" class="btn btn-primary">To see the
+        tracklisting</a>
     </div>
   </div>
   <div class="card">
@@ -125,7 +129,8 @@
         Grow Up'.This was about the time that I tried to introduce Tom to my friends, and I'm still trying 30 years
         later.
         There are lots of albums to choose from with a style for most people.</p>
-      <a href="https://en.wikipedia.org/wiki/Bone_Machine" target="_blank" class="btn btn-primary">To see the tracklisting</a>
+      <a href="https://en.wikipedia.org/wiki/Bone_Machine" target="_blank" class="btn btn-primary">To see the
+        tracklisting</a>
     </div>
   </div>
   <!-- Social/links -->
