--- a/subscribe.html
+++ b/subscribe.html
@@ -20,8 +20,8 @@
 
 <body>
   <header>
-    <div class="container-fluid">
-      <h2>Tom Waits Unofficial Fansite</h2><br>
+
+    <h2>Tom Waits Unofficial Fansite</h2><br>
     </div>
   </header>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -47,108 +47,97 @@
       </ul>
     </div>
   </nav>
-  <div class="container-fluid">
+  <form>
+    <div class="form-row">
+      <div class="form-group col-md-7">
 
-    <h2>Subscribe For Tom Updates</h2>
-    <p>To get the latest news and to hear about releases and show, then just
-      <strong>sign up!</strong> After all, once you have read some of these facts about Tom, then how could you not be
-      interested?</p>
-
-    <ul class="facts">
-      <li>
-        <strong>He invented an instrument called a ‘Dumpstalele’.</strong> By taking a metal debris dumpster and
-        stretching piano strings across it, Waits once created a new instrument which he named the Strata Dumpster, or
-        the Dumpstalele.
-        He’s described the instrument’s sound as “trainlike and huge, like trash day with a purpose.”
-      </li>
-      <li>
-        <strong>He hates the internet, calls it “robots…taking over the world”</strong> When Waits’ then-unreleased
-        album Bad as Me was leaked through Amazon in 2011, he criticised the internet for spoiling new music.
-
-        In his video preview for the album, he said, “Here’s the way I see it: If you’re having a birthday and I came
-        early and started eating your cake and maybe I opened up all your presents and started playing with your toys,
-        would you be alright with that?”
-      </li>
-    </ul>
-  </div>
-  <!-- form inputs -->
-  <form action="post"></form>
-  <div class="form-row">
-    <div class="form-group col-md-4">
-      <label for="fname">Your first name</label>
-      <input type="text" class="form-control" id="fname" placeholder="Enter your first name">
+        <h2>Subscribe For Tom Updates</h2><br>
+        <p>To get the latest news and to hear about releases and show, then just
+          <strong>sign up!</strong> After all, once you have read some of these facts about Tom, then how could you not
+          be
+          interested?</p>
+      </div>
     </div>
-    <div class="form-group col-md-4">
-      <label for="lname">Your last name</label>
-      <input type="text" class="form-control" id="lname" placeholder="Enter your last name">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="email">Your email</label>
-      <input type="email" class="form-control" id="email" placeholder=" Enter your email">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="password">Your password</label>
-      <input type="password" class="form-control" id="password" placeholder="Enter your password">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="fave">Your favourite Tom song?</label>
-      <select id="fave" class="form-control">
-        <option selected>Choose from...</option>
-        <option>16 Shells From A Thirty'Ought-6</option>
-        <option>Cold Cold Ground</option>
-        <option>Dirt In The Ground</option>
-        <option>Get Behind The Mule</option>
-        <option>Hang On St Christopher</option>
-        <option>Hold On</option>
-        <option>House Where Nobody Lives</option>
-        <option>In The Neighbourhood</option>
-        <option>Step Right Up</option>
-        <option>Temptation</option>
-        <option>The Piano Has Been Drinking</option>
-        <option>Tom Traubert's Blues</option>
-        <option>Union Square</option>
-      </select>
-    </div>
-    <div class="form-group col-md-4">
-      <label for="movie">Your favourite Tom movie?</label>
-      <select id="movie" class="form-control">
-        <option selected>Choose from...</option>
-        <option>Big Time</option>
-        <option>Bram Stoker's Dracula</option>
-        <option>Cold Feet</option>
-        <option>Coffee and Cigarettes</option>
-        <option>Down By Law</option>
-        <option>Ironweed</option>
-        <option>Mystery Men</option>
-        <option>Seven Psychopaths</option>
-        <option>The Ballad of Buster Scruggs</option>
-        <option>The Cotton Club</option>
-      </select>
-    </div>
-  </div>
-  <a class="btn btn-secondary btn-lg" href="https://www.songkick.com/artists/14561-tom-waits" target="_blank"
-    role="button">Subscribe</a>
+
+
+    <!-- form inputs -->
+    <form action="post">
+      <div class="form-row">
+        <div class="form-group col-md-7">
+          <label for="fname">Your first name</label>
+          <input type="text" class="form-control" id="fname" placeholder="Enter your first name">
+        </div>
+        <div class="form-group col-md-7">
+          <label for="lname">Your last name</label>
+          <input type="text" class="form-control" id="lname" placeholder="Enter your last name">
+        </div>
+        <div class="form-group col-md-7">
+          <label for="email">Your email</label>
+          <input type="email" class="form-control" id="email" placeholder=" Enter your email">
+        </div>
+        <div class="form-group col-md-7">
+          <label for="password">Your password</label>
+          <input type="password" class="form-control" id="password" placeholder="Enter your password">
+        </div>
+        <div class="form-group col-md-7">
+          <label for="fave">Your favourite Tom song?</label>
+          <select id="fave" class="form-control">
+            <option selected>Choose from...</option>
+            <option>16 Shells From A Thirty'Ought-6</option>
+            <option>Cold Cold Ground</option>
+            <option>Dirt In The Ground</option>
+            <option>Get Behind The Mule</option>
+            <option>Hang On St Christopher</option>
+            <option>Hold On</option>
+            <option>House Where Nobody Lives</option>
+            <option>In The Neighbourhood</option>
+            <option>Step Right Up</option>
+            <option>Temptation</option>
+            <option>The Piano Has Been Drinking</option>
+            <option>Tom Traubert's Blues</option>
+            <option>Union Square</option>
+          </select>
+        </div>
+        <div class="form-group col-md-7">
+          <label for="movie">Your favourite Tom movie?</label>
+          <select id="movie" class="form-control">
+            <option selected>Choose from...</option>
+            <option>Big Time</option>
+            <option>Bram Stoker's Dracula</option>
+            <option>Cold Feet</option>
+            <option>Coffee and Cigarettes</option>
+            <option>Down By Law</option>
+            <option>Ironweed</option>
+            <option>Mystery Men</option>
+            <option>Seven Psychopaths</option>
+            <option>The Ballad of Buster Scruggs</option>
+            <option>The Cotton Club</option>
+          </select>
+        </div>
+      </div>
+      <a class="btn btn-secondary btn-lg" href="https://www.songkick.com/artists/14561-tom-waits" target="_blank"
+        role="button">Subscribe</a>
+    </form>
 
 
 
-
-
-  <!-- Social/links -->
-  <footer>
-    <ul class="social-networks">
-      <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook"> </i></a></li>
-      <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-      <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
-            class="fab fa-spotify"></i></a></li>
-      <li><a href="https://www.instagram.com/tomwaits/?hl=en" target="_blank"><i class="fab fa-instagram"> </i></a></li>
-    </ul>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous">
-  </script>
+    <!-- Social/links -->
+    <footer>
+      <ul class="social-networks">
+        <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook"> </i></a></li>
+        <li><a href="https://twitter.com/tomwaits" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+        <li><a href="https://open.spotify.com/artist/7x83XhcMbOTl1UdYsPTuZM" target="_blank"><i
+              class="fab fa-spotify"></i></a></li>
+        <li><a href="https://www.instagram.com/tomwaits/?hl=en" target="_blank"><i class="fab fa-instagram"> </i></a>
+        </li>
+      </ul>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
