Add saved images to assets folder and replace links in toms_discs and her img

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           you are a seasoned fan, you can get <strong>'all things Tom'</strong>
           on the following pages. If you subscribe you'll also receive all of the latest news and can vote for your
           favourite Tom tune!</p>
-        <img class="img-fluid" src="http://images.genius.com/505d2d5d1d43304dca446fd2e788a0f8.750x750x1.jpg"
+        <img class="img-fluid" src="assets/images/hero.jpg"
           alt="Tom Waits">
       </div>
     </div>
