--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           you are a seasoned fan, you can get <strong>'all things Tom'</strong>
           on the following pages. If you subscribe you'll also receive all of the latest news and can vote for your
           favourite Tom tune!</p>
-        <img class="img-fluid" src="assets/images/hero.jpg"
-          alt="Tom Waits">
+        <img class="img-fluid" src="assets/images/hero.jpg" alt="Tom Waits">
       </div>
     </div>
   </div>
