--- a/toms_discs.html
+++ b/toms_discs.html
@@ -47,8 +47,7 @@
   </nav>
   <!-- Card/images/album descrips -->
   <div class="card">
-    <img class="card-img-top" src="assets/images/129904-tom-waits-small-change.jpg"
-      alt="Small Change">
+    <img class="card-img-top" src="assets/images/129904-tom-waits-small-change.jpg" alt="Small Change">
     <div class="card-body">
       <h4 class="card-title">Small Change</h4>
       <p class="card-text">This masterpiece from 1976 is considered a real fan favourite. It has the feel of a 40's
@@ -63,8 +62,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="assets/images/rain_dogs.jpg"
-      alt="Rain Dogs">
+    <img class="card-img-top" src="assets/images/rain_dogs.jpg" alt="Rain Dogs">
     <div class="card-body">
       <h4 class="card-title">Rain Dogs</h4>
       <p class="card-text">Released in 1985 this is part of a 3 album release, that saw Tom reach cult status. The
@@ -78,9 +76,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top"
-      src="assets/images/big_time.jpg"
-      alt="Big Time">
+    <img class="card-img-top" src="assets/images/big_time.jpg" alt="Big Time">
     <div class="card-body">
       <h4 class="card-title">Big Time</h4>
       <p class="card-text">A real hit on the senses with this visual 'live' recording. Tom is fine form, with his live
@@ -94,9 +90,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top"
-      src="assets/images/TomWaits_MuleVariations2.jpg"
-      alt="Mule Variations">
+    <img class="card-img-top" src="assets/images/TomWaits_MuleVariations2.jpg" alt="Mule Variations">
     <div class="card-body">
       <h4 class="card-title">Mule Variations</h4>
       <p class="card-text">Perhaps Tom's finest work and the number 1 choice of many fans. Released in 1999 and with
@@ -120,8 +114,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="assets/images/TomWaits-BoneMachine.jpg"
-      alt="Bone Machine">
+    <img class="card-img-top" src="assets/images/TomWaits-BoneMachine.jpg" alt="Bone Machine">
     <div class="card-body">
       <h4 class="card-title">Bone Machine</h4>
       <p class="card-text">Released in 1992, this album features one of Tom's biggest commercial hits with 'I Don't
