Correct overflow issue on index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Dongle&family=Noticia+Text:ital@1&family=Red+Hat+Mono&family=Zen+Old+Mincho&display=swap"
-    rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -61,7 +55,8 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <container>
+  <div class="row no-gutters">
     <div class="col-sm-6">
       <div class="news">
         <h3>News</h3><br>
@@ -108,9 +103,13 @@
         <p class="mb-0">"If you record the sound of bacon in a frying pan and play it back, it sounds like the pops and
           cracks on an old 33 1/3 recording. Almost exactly like that. You could substitute it for that sound."</p><br>
         <p class="mb-0">"Don't you know there ain't no devil, it's just god when he's drunk."</p><br>
+        <p class="mb-0">“And the things you can’t remember tell the things you can’t forget that history puts a saint in every dream.”</p><br>
+        <p class="mb-0">“I've been riding on the crest of a slump lately.”</p><br>
+        <p class="mb-0">“The piano has been drinking, not me.”</p><br>
       </blockquote>
     </div>
   </div>
+</container>
   <footer>
     <ul class="social-networks">
       <li><a href="https://www.facebook.com/tomwaits" target="_blank"><i class="fab fa-facebook"> </i></a></li>
