--- a/subscribe.html
+++ b/subscribe.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Azeret+Mono&family=Dongle&family=Noticia+Text:ital@1&family=Red+Hat+Mono&family=Zen+Old+Mincho&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-  <link rel="stylesheet" href="assets/styles.css">
-  <title>Subscribe</title>
-</head>
-
-<body>
-  <header>
-
-    <h2>Tom Waits Unofficial Fansite</h2><br>
-  </header>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/styles.css">
+    <title>Subscribe</title>
+  </head>
+  
+  <body>
+    <header>
+      <div class="container-fluid">
+        <h2>Tom Waits Unofficial Fansite</h2><br>
+      </div>
+    </header>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -46,8 +41,11 @@
       </ul>
     </div>
   </nav>
-  <div class="form-row">
+   <!-- put in a container -->
+  <container>
+  <div class="row">
     <div class="form-group col-md-7">
+      <div class="subscribe">
 
       <h2>Subscribe For Tom Updates</h2><br>
       <p>To get the latest news and to hear about releases and show, then just
@@ -56,28 +54,27 @@
         interested?</p>
     </div>
   </div>
+</div>
+</container>
+
   <!-- form inputs -->
-  <form action="post">
-    <div class="form-row">
-      <div class="form-group col-md-7">
+  <form>
+    <div class="row">
+      <div class="form-group col-sm-7">
         <label for="fname">Your first name</label>
-        <input type="text" class="form-control" id="fname" placeholder="Enter your first name">
+        <input type="text" name="fname" class="form-control" id="fname" placeholder="Enter your first name" required>
       </div>
-      <div class="form-group col-md-7">
+      <div class="form-group col-sm-7">
         <label for="lname">Your last name</label>
-        <input type="text" class="form-control" id="lname" placeholder="Enter your last name">
+        <input type="text" name="lname" class="form-control" id="lname" placeholder="Enter your last name" required>
       </div>
-      <div class="form-group col-md-7">
+      <div class="form-group col-sm-7">
         <label for="email">Your email</label>
-        <input type="email" class="form-control" id="email" placeholder=" Enter your email">
+        <input type="email" name="email" class="form-control" id="email" placeholder=" Enter your email" required>
       </div>
-      <div class="form-group col-md-7">
-        <label for="password">Your password</label>
-        <input type="password" class="form-control" id="password" placeholder="Enter your password">
-      </div>
-      <div class="form-group col-md-7">
+      <div class="form-group col-sm-7">
         <label for="fave">Your favourite Tom song?</label>
-        <select id="fave" class="form-control">
+        <select id="fave" name="fave" class="form-control">
           <option selected>Choose from...</option>
           <option>16 Shells From A Thirty'Ought-6</option>
           <option>Cold Cold Ground</option>
@@ -94,9 +91,9 @@
           <option>Union Square</option>
         </select>
       </div>
-      <div class="form-group col-md-7">
+      <div class="form-group col-sm-7">
         <label for="movie">Your favourite Tom movie?</label>
-        <select id="movie" class="form-control">
+        <select id="movie" name="movie" class="form-control">
           <option selected>Choose from...</option>
           <option>Big Time</option>
           <option>Bram Stoker's Dracula</option>
@@ -111,8 +108,9 @@
         </select>
       </div>
     </div>
-    <a class="btn btn-secondary btn-lg" href="https://www.songkick.com/artists/14561-tom-waits" target="_blank"
-      role="button">Subscribe</a>
+    <div class="button">
+    <button onClick="window.location.href=window.location.href">Subscribe</button>
+  </div>
   </form>
 
   <!-- Social/links -->
