--- a/tom_live.html
+++ b/tom_live.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-  <link rel="stylesheet" href="assets/styles.css">
-  <title>Tom Live</title>
-</head>
-
-<body>
-  <div class="container-fluid">
-    <h1>Tom Waits Unofficial Fansite</h1>
-  </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+    <link rel="stylesheet" href="assets/styles.css">
+    <title>Tom Live</title>
+  </head>
+  
+  <body>
+    <header>
+      <div class="container-fluid">
+        <h2>Tom Waits Unofficial Fansite</h2><br>
+      </div>
+    </header>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 
     <!-- Toggler/collapsibe Button -->
@@ -42,38 +44,60 @@
     </div>
   </nav>
   <!-- Youtube links-->
+  <div class="container-fluid">
+      <h4>Downtown Train</h4><br>
+    </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rLtZKkCIVmI" allowfullscreen></iframe>
   </div>
-
+  
+  <div class="container-fluid">
+      <h4>16 Shells From a 30 'ought 6</h4><br>
+    </div>
+  
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qwRkBTG17vk" allowfullscreen></iframe>
   </div>
+  <div class="container-fluid">
+      <h4>Cold Cold Ground</h4><br>
+    </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jLyHHwDXw5Y" allowfullscreen></iframe>
   </div>
-
+  <div class="container-fluid">
+      <h4>'Til The Money Runs Out</h4><br>
+    </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wOQplFQqOk4" allowfullscreen></iframe>
   </div>
+  <div class="container-fluid">
+      <h4>Better Off Without A Wife</h4><br>
+    </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/94h3JEC9db0" allowfullscreen></iframe>
   </div>
-
+  <div class="container-fluid">
+      <h4>Chicago</h4><br>
+    </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YVJ3iY7EceE" allowfullscreen></iframe>
   </div>
   <div class="container-fluid">
-    <div class="influences">
-      <h2>If You Wonder Who Influenced Tom?</h2><br>
+      <h4>Tom is influenced by Bob Dylan</h4><br>
     </div>
-  </div>
+ 
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MGxjIBEZvx0" allowfullscreen></iframe>
   </div>
+  <div class="container-fluid">
+      <h4>Tom is influenced by Howlin' Wolf</h4><br>
+    </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HTDjD_UdJYs" allowfullscreen></iframe>
   </div>
+  <div class="container-fluid">
+      <h4>Tom is influenced by Theolonius Monk</h4><br>
+    </div>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KshrtLXBdl8" allowfullscreen></iframe>
   </div>
